--- a/css/sime.css
+++ b/css/sime.css
@@ -59,6 +59,130 @@ p{
     font-style: normal;
 }
 
+.menu-list li a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.nav-comment a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+
+/*=======================MENU MOBILE================================*/
+
+.hamburger-icon {
+    width: 1vw;
+    height: 1vw;
+    display: none;
+}
+
+.menu-mobile {
+    position: fixed;
+    top: 0;
+    right: -100vw;
+    width: 50vw; 
+    max-width: 280px;
+    height: 100vh;
+    background-color: #141619; 
+    z-index: 10000;
+    padding: 3vw 2vw;
+    transition: right 0.3s ease-in-out;
+    box-shadow: 0.2vw 0 1vw rgba(0,0,0,0.5);
+    display: none;
+    flex-direction: column; 
+}
+
+.menu-mobile.open {
+    right: 0; 
+}
+
+.menu-mobile .fechar {
+    position: absolute;
+    top: 10vw;
+    right: 10vw;
+    width: 3vw;
+    height: 3vw;
+    max-width: 30px; 
+    max-height: 30px;
+    cursor: pointer;
+    z-index: 10001;
+    color: #FFFFFF; 
+}
+
+.menu-mobile .menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    width: 100%; 
+    padding: 0;
+    margin-top: 25vw;
+}
+
+.menu-mobile .menu-list li {
+    width: 100%;
+    position: relative; 
+    display: flex; 
+    align-items: center; 
+    padding: 1.5vw 2vw;
+    margin-bottom: 8vw;
+}
+
+.menu-mobile .menu-list li img {
+    width: 4vw;
+    height: 4vw;
+    margin-right: 2vw;
+}
+
+.menu-mobile .menu-list li a {
+    color: #FFFFFF; 
+    font-size: clamp(2vw, 3vw, 28px);
+    font-weight: 300;
+    margin-left: 0; 
+    flex-grow: 1;
+}
+
+.menu-mobile .menu-list li a.menu-ativo {
+    color: #A55FE6; 
+    font-weight: 600; 
+    background-color: transparent;
+    border-bottom: none; 
+    padding-bottom: 0;
+}
+
+.menu-mobile .menu-list li:has(a.menu-ativo) img {
+    filter: invert(40%) sepia(80%) saturate(2000%) hue-rotate(260deg) brightness(120%);
+}
+
+.menu-mobile .menu-list li:has(a.menu-ativo)::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0.4vw;
+    height: 100%;
+    background-color: #A55FE6; 
+    border-radius: 0 0.5vw 0.5vw 0; 
+}
+
+
+.menu-nav ul li a:active {
+    color: #A55FE6;
+    text-decoration: none;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+}
+
+.menu-nav ul li a.menu-ativo {
+    color: #A55FE6;
+    text-decoration: none;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    border-bottom: clamp(0.1vw, 0.14vw, 2px) solid #A55FE6;
+    padding-bottom: clamp(0.2vw, 0.34vw, 5px);
+}
+
+
 .nav-comment p{
     color: #ffffff;
     margin-top: 18px;
@@ -434,6 +558,15 @@ p{
     border: none;
     text-wrap: nowrap;
 }
+.verify-values-linear-gradient-btn a{
+    font-weight: 500;
+    font-style: normal;
+    color: white;
+    font-size: 1.6rem;
+    border: none;
+    text-wrap: nowrap;
+    text-decoration: none;
+} 
 
 .verify-values-icon-dollar{
     width: 20%;
@@ -626,13 +759,9 @@ footer{
 }
 .contact-icons img{
     width: 3rem;
-    margin-top: 4%;
     margin-right: 2rem;
 }
 
-
-/*LAPTOP M*/
-@media (max-width: 1024px){}
 
 /*MOBILE L*/
 @media (max-width: 428px){
@@ -644,14 +773,26 @@ footer{
         margin: 0 auto;
         margin-top: 3rem;
     }
+    .nav-menu,
+    .nav-comment {
+        display: none; 
+    }
 
-    #nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    /* font-size: 1.4rem; */
+.hamburger-icon{
+        display: block;
+        height: 5vw;
+        width: 6vw;
+        margin-right: 3vw;
+    }
+
+    .menu-mobile {
+        display: flex;
+    }
+
+    .menu-mobile .menu-list li {
+        margin-bottom: 6vw;
 }
+
 .introduction-text{
     max-width: 370px;
 }
@@ -812,7 +953,7 @@ footer{
         width: 40vw;
         height: 30vh;
         left: 29vw;
-        top: 2405px;
+        top: 2305px;
         background: #44A1A0;
         border-radius: 80%;
         filter: blur(10vw);
@@ -873,6 +1014,21 @@ footer{
         opacity: 60%;
     }
 
+    .nav-menu,
+    .nav-comment {
+        display: none; 
+    }
+
+.hamburger-icon{
+        display: block;
+        height: 5vw;
+        width: 6vw;
+        margin-right: 3vw;
+    }
+
+    .menu-mobile {
+        display: flex;
+    }
 
 }
 /*MOBILE M*/
@@ -941,7 +1097,7 @@ footer{
         width: 40vw;
         height: 30vh;
         left: 29vw;
-        top: 2220px;
+        top: 2177px;
         background: #44A1A0;
         border-radius: 80%;
         filter: blur(10vw);
