--- a/css/comente.css
+++ b/css/comente.css
@@ -31,7 +31,7 @@ a {
 }
 
 .logo img {
-     margin-left: clamp(1.5vw, 4vw, 32px);
+    margin-left: clamp(1.5vw, 4vw, 32px);
     width: 190px; 
 }
 
@@ -66,7 +66,6 @@ a {
     color: #A55FE6;
 }
 
-/*NOVO*/
 .menu-nav ul li a:active {
     color: #A55FE6;
     text-decoration: none;
@@ -101,8 +100,8 @@ a {
 .comment p.menu-ativo {
     color: #A55FE6;
     font-weight: 500;
-    border-bottom: 0.094vw solid #A55FE6; 
-    padding-bottom: 0.24vw; 
+    border-bottom: clamp(0.1vw, 0.14vw, 2px) solid #A55FE6;
+    padding-bottom: 0.01vw; 
 }
 
 .hamburger-icon {
@@ -793,6 +792,10 @@ hr {
         width: 36vw;
         height: 36vw;
     }
+
+    .feedback-text{
+        margin-top: 1vw;
+    }
 }
 
 @media screen and (max-width: 1024px) and (max-height: 600px){
@@ -1011,6 +1014,10 @@ hr {
 
     }
 
+    .comentario {
+        margin-left: 25vw;
+    }
+
     .subtitle-comentario{
         grid-row: 1;
         font-size: 4vw !important;
@@ -1025,7 +1032,6 @@ hr {
     .computador {
         grid-row: 2;
         width: 84vw;
-        max-width: 300px;
         margin: 0;
         margin-right: 33vw;
     }
@@ -1048,10 +1054,8 @@ hr {
         padding: 1vw;
     }
 
-    /* Regra Global */
     .input-container.with-icon{
         position:relative;
-        /* ESTA LINHA ESTÁ ATIVA: */
         margin-bottom:clamp(0.7vw, 1vw, 25px); 
     }
 
@@ -1095,7 +1099,7 @@ hr {
         font-size: 1.6vw;
         width: 38vw;
         align-items: center;
-        margin-left: 3.3vw;
+        margin-left: 2vw;
     }
 
     #textForm{
@@ -1144,7 +1148,6 @@ hr {
         margin-bottom: 1.5vw;
     }
 
-    
     #comentarios-lista{
         gap:clamp(1.5vw, 2vw, 70px);
         max-width:clamp(40vw, 60vw, 800px);
@@ -1209,8 +1212,6 @@ hr {
         margin-right: clamp(0.1vw, 0.135vw, 3px);
     }
 
-    /*=======PAGINAÇÃO=========*/
-
     .pagination {
         gap: clamp(0.6vw, 1.5vw, 40px);
     }
@@ -1241,7 +1242,22 @@ hr {
         width: clamp(0.8vw, 1.3vw, 18px);
         height: clamp(0.8vw, 1.3vw, 18px);
         right: 12.7vw; 
-        top: clamp(1vw, 8.7vw, 110px);
+        top: clamp(1vw, 8.8vw, 110px);
+    }
+
+    .c3{
+        width: 0.8vw;
+        height: 0.8vw;
+        left: 16.7vw;
+        top: 2.7vw;
+    }
+
+    .comentario {
+        margin-left: 25vw;
+    }
+
+    .feedback-text{
+        margin-left: 19vw;
     }
 }
 
@@ -1253,8 +1269,16 @@ hr {
     .c3{
         width: 0.8vw;
         height: 0.8vw;
-        left: 16.3vw;
+        left: 17vw;
         top: 3vw;
+    }
+
+    .comentario {
+        margin-left: 25vw;
+    }
+
+    .feedback-text{
+        margin-left: 19.4vw;
     }
 }
 
@@ -1263,17 +1287,19 @@ hr {
     .logo img{
         margin-left: clamp(0.5vw, 5vw, 32px);
         margin-top: clamp(0.5vw, 5vw, 32px);
-        width: 115px; 
+        width: 130px; 
     }
+
     .menu-nav,
     .comment {
         display: none; 
     }
+
     .hamburger-icon{
         display: block;
         height: 5vw;
         width: 6vw;
-        margin-right: 3vw;
+        margin-right: 9vw;
     }
 
     .menu-mobile {
@@ -1294,14 +1320,14 @@ hr {
 
     .subtitle {
         grid-row: 1;
-        font-size: 6vw;
+        font-size: 8vw;
         text-align: center;
         margin: 0;
     }
 
     .imagem {
         grid-row: 2;
-        width: 60vw;
+        width: 70vw;
         max-width: 600px;
         margin: 0;
         margin-right: 10vw;
@@ -1315,8 +1341,8 @@ hr {
 
     .c1 {
         position: absolute;
-        width: clamp(5vw, 45vw, 650px);
-        height: clamp(5vw, 45vw, 650px);
+        width: clamp(5vw, 50vw, 650px);
+        height: clamp(5vw, 50vw, 650px);
         left: clamp(5vw, 7.813vw, 150px);
         top: clamp(15vw, 57vw, 1000px);  
     }
@@ -1326,13 +1352,16 @@ hr {
     }
 
     .introduction-text-mobile {
-        display: flex;
         grid-row: 3;
-        font-size: 2.4vw;
         text-align: justify;
         margin: 0;
+        display: flex;
+        margin-top: clamp(3vw, 4vw, 50px);
+        font-weight: 300;
+        color: #E5E5E5;
+        font-size: clamp(1vw, 3vw, 30px);
+        line-height: 1.5;
         width: 69vw;
-        margin-top: 4vw;
     }
 
     .comentario {
@@ -1347,23 +1376,23 @@ hr {
         display: contents;
     }
 
-    .subtitle-comentario{
+    .comentario-conteudo .subtitle-comentario{
         grid-row: 1;
-        font-size: 4.8vw;
+        font-size: 6vw !important;
         text-align: center;
-        width: 84%;
+        width: 70%;
         margin: 0;
     }
 
     .computador {
         grid-row: 2;
-        width: 60vw;
-        max-width: 360px;
-        margin-left: 15vw !important ;
+        width: 70vw !important;
+        max-width: 100% !important;
+        margin-right: 40vw !important;
     }
 
     .computador img {
-        width: 100%;
+        width: 100% !important;
         height: auto;
     }
 
@@ -1376,53 +1405,56 @@ hr {
     }
     
     .input-field-group {
-        width: 83%;
-        padding: 1.6vw;
+        width: 75vw;
+        width: 100%;
+        padding: 7vw;
         left: 8vw;
+        height: 100%;
     }
 
     .input-icon {
         position: absolute;
         left: clamp(0.5vw, 4vw, 15px);
-        top: clamp(1.9vw, 6vw, 36px);
+        top: clamp(1.9vw, 6.5vw, 36px);
         transform: translateY(-50%);
-        width: clamp(0.8vw, 4vw, 20px);
-        height: clamp(0.8vw, 4vw, 20px);
+        width: clamp(0.8vw, 5vw, 20px);
+        height: clamp(0.8vw, 5vw, 20px);
         margin-top: 0.4vw;
     }
     
     .input-container input,
     .input-container textarea{
         border: clamp(0.05vw, 0.07vw, 1px) solid #B784E7;
-        border-radius: clamp(2vw, 5vw, 15px);
+        border-radius: clamp(0.3vw, 1vw, 15px) !important;
         padding: clamp(0.1vw, 3.5vw, 16px); 
-        font-size: clamp(0.8vw, 1.08vw, 18px);
-        height: 9vw !important;
+        font-size: clamp(2vw, 2.9vw, 40px) !important;
+        height: 11vw !important;
     }
     
     .input-container.with-icon .input-field-group input {
         font-size: 1.9vw;
         padding-top: 3.5vw;
         padding-bottom: 3.5vw;
-        padding-left: clamp(2vw, 7.3vw, 45px) !important;
+        padding-left: clamp(2vw, 9vw, 45px) !important;
     }
 
     .input-container ::placeholder {
-        font-size: clamp(1vw, 2vw, 24px);
+        font-size: clamp(1vw, 2.9vw, 24px);
     }
 
     #textContent, #textNome, #textComente{
-        font-size: 1.7vw;
-        width: 60vw;
+        font-size: 2.6vw !important;
+        width: 72vw;
         align-items: center;
-        margin-left: 15vw;
+        text-align: justify;
+        margin-left: 1.6vw;
     }
 
     #textForm{
         width: 60vw;
         align-items: center;
-        margin-left: 30vw;
-        font-size: 1.7vw;
+        margin-left: 29vw !important;
+        font-size: 2.5vw !important;
     }
 
     .avaliacao{
@@ -1431,12 +1463,12 @@ hr {
         width:clamp(60vw, 70vw, 800px);
         flex-direction: column; 
         align-items: flex-start;
-        margin-left: 18vw;
+        margin-left: 16vw !important;
     }
 
     .c3{
-        top: 3.5vw;
-        left: clamp(1vw, 22vw, 300px); 
+        top: 4.8vw !important;
+        left: clamp(10vw, 29vw, 300px) !important; 
         width: 1.2vw;
         height: 1.2vw;
     }
@@ -1444,54 +1476,55 @@ hr {
     .star-icon{
         list-style-type:none;
         cursor:pointer;
-        font-size:clamp(2.0vw, 5vw,40px);
-        border:none;
+        font-size:clamp(4vw, 6.7vw, 70px) !important;
+        border:none; 
     }
 
     .feedback-text{
-        font-size:clamp(0.8vw, 2vw,16px);
-        margin-left:clamp(0.7vw, 26vw, 330px);
+        font-size:clamp(2vw, 2.5vw, 46px) !important;
+        margin-left:clamp(30vw, 33vw, 400px) !important;
         width:clamp(15vw, 34vw,300px);
-        margin-top: -5vw;
+        margin-top: -5.6vw !important;
     }
 
     .linear-gradient-btn {
-        width: 25vw;
-        height: 6.3vw;
-        font-size: 2vw;
+        width: 32vw !important; 
+        height: 8vw !important; 
+        font-size: 2.2vw !important;
         max-height: 30vw;
         margin-left: 30vw;
     }
 
     .c2 {
         position: absolute;
-        width: clamp(5vw, 40vw, 600px);
-        height: clamp(5vw, 40vw, 600px);
+        width: clamp(5vw, 45vw, 600px);
+        height: clamp(5vw, 45vw, 600px);
         left: clamp(15vw, 34vw, 500px);
         margin-top: clamp(60vw, 180vw, 1350px);   
     }
 
     #comentarios-lista{
         gap:clamp(1.5vw, 3vw, 70px);
-        max-width:clamp(40vw, 67vw, 700px);
+        max-width:clamp(54vw, 68vw, 800px) !important;
         margin:0 auto;
     }
 
     .comentario-item {
-        padding:clamp(1.0vw, 2.5vw, 30px);
+        padding:clamp(1.0vw, 3vw, 30px);
         column-gap:clamp(0.5vw,0.781vw,15px);
     }
 
     .comentario-icone {
         grid-area: icone;
-        width: clamp(3.5vw, 4vw, 100px); 
-        height: clamp(3.5vw, 4vw, 100px);
+        width: clamp(5vw, 6vw, 100px); 
+        height: clamp(5vw, 6vw, 100px);
         align-items: center; 
     }
 
     .comentario-icone img {
-        width: clamp(3vw, 4vw, 60px); 
-        height: clamp(3vw, 4vw, 60px);
+        width: clamp(3vw, 6vw, 60px); 
+        height: clamp(3vw, 6vw, 60px);
+        margin-top: 3vw;
         align-items: center;   
     }
 
@@ -1502,7 +1535,7 @@ hr {
     }
 
     .comentario-autor {
-        font-size: clamp(1.0vw, 2.5vw, 22px); 
+        font-size: clamp(1.0vw, 3.4vw, 22px); 
         color: #A55FE6; 
         font-weight: 600;
         margin-left: clamp(1.5vw, 3vw, 40px);
@@ -1514,18 +1547,18 @@ hr {
     }
 
     .comentario-rating {
-        font-size: clamp(1.5vw, 3vw, 300px);
+        font-size: clamp(1.5vw, 4vw, 300px);
         margin-top: clamp(0.5vw, 0.781vw, 20px);
         margin-right: clamp(1vw, 2vw, 30px);
     }
 
     .comentario-data {
-        font-size: clamp(0.6vw, 1.5vw, 12px);
+        font-size: clamp(0.6vw, 2.2vw, 12px);
         right: clamp(3.5vw, 4.167vw, 60px);
     }
 
     .comentario-texto {
-        font-size: clamp(1.0vw, 2vw, 20px); 
+        font-size: clamp(1.0vw, 3.4vw, 20px); 
         margin-top: clamp(0.15vw, 0.26vw, 5px);
         margin-bottom: 0; 
         margin-left: clamp(2.5vw, 6.5vw, 100px);
@@ -1540,13 +1573,13 @@ hr {
     }
 
     .first, .prev, .next, .last {
-        width: clamp(2.5vw, 7vw, 100px);
-        height: clamp(2.5vw, 7vw, 100px);
+        width: clamp(2.5vw, 8.1vw, 100px);
+        height: clamp(2.5vw, 8.1vw, 100px);
     }
 
     .first span, .prev span, .next span, .last span {
         color: #A55FE6; 
-        font-size: clamp(1.5vw, 2.3vw, 50px); 
+        font-size: clamp(1.5vw, 3vw, 50px); 
         font-weight: 700;
         transform: none; 
         z-index: 2;
@@ -1554,7 +1587,7 @@ hr {
 
     .numbers div {
         color: #E5E5E5;
-        font-size: 2vw;
+        font-size: 2.8vw;
         padding: 0 0.521vw;
     }
 
@@ -1572,9 +1605,10 @@ hr {
     }
 
     .info img {
-        width: 22%; 
-        height: 22%;
-        margin-bottom: 5vw;
+        width: 31%; 
+        height: 31%;
+        margin-top: 1vw;;
+        margin-bottom: 4vw;
     }
 
     .footer-list {
@@ -1584,21 +1618,21 @@ hr {
     }
 
     .footer-title {
-        font-size: clamp(0.8vw, 1.8vw, 20px);
-        margin-top: clamp(1vw, 5vw, 24px);
+        font-size: clamp(0.8vw, 2.5vw, 20px);
+        margin-top: clamp(1vw, 1.5vw, 24px);
         margin-left: clamp(1.5vw, 3vw, 32px); 
     }
 
     .footer-subtitle {
         margin-left: clamp(1.5vw, 3vw, 32px); 
-        font-size: clamp(0.7vw, 1.5vw, 18px);
+        font-size: clamp(0.7vw, 2.3vw, 18px);
         margin-top: clamp(0.5vw, 1vw, 16px);
         display: block;
         text-align: left; 
     }
 
     .contact-icons img {
-        width: clamp(1.2vw, 3vw, 28px);
+        width: clamp(1.2vw, 4.7vw, 28px);
         margin-bottom: clamp(0.5vw, 50vw, 12px);
         margin-right: clamp(1.5vw, 2.17vw, 32px);
     }
@@ -1654,6 +1688,10 @@ hr {
         margin-left: 0; 
         flex-grow: 1;
     }
+
+    .comentario{
+        margin-right: 20vw;
+    }
     
     .Campos {
         grid-row: 3;
@@ -1675,7 +1713,7 @@ hr {
         width:clamp(60vw, 70vw, 800px);
         flex-direction: column; 
         align-items: flex-start;
-        margin-left: 6vw;
+        margin-left: -2vw !important;
     }
 
     .linear-gradient-btn {
@@ -1690,13 +1728,14 @@ hr {
         font-size: 2vw;
         width: 60vw;
         align-items: center;
-        margin-left: 10vw;
+        margin-left: 2vw;
     }
 
-    #textForm{
+    #textContent, #textForm{
         width: 60vw;
         align-items: center;
-        margin-left: 17vw;
+        text-align: center;
+        margin-left: 1vw !important;
         font-size: 2vw;
     }
 
@@ -1713,128 +1752,115 @@ hr {
     }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 500px) {
 
-    .hamburger-icon{
-        margin-right: 9vw;
-    }
-
-    .comentario {
-        display: grid;
-        justify-items: center;
-        margin-top: 10vw;
-        padding: 0 5vw;
-        gap: 0vw;
-    }
-
-    .comentario-conteudo {
-        display: contents;
-    }
-
-    .subtitle-comentario{
-        grid-row: 1;
-        font-size: 4.8vw !important;
-        text-align: center;
-        width: 84%;
-        margin: 0;
+    .comentario{
+        margin-right: 25vw;
     }
 
     .computador {
         grid-row: 2;
-        width: 60vw;
-        max-width: 360px;
-        margin-left: 15vw !important ;
-    }
-
-    .computador img {
-        width: 100%;
-        height: auto;
+        width: 75vw;
+        max-width: 300px;
+        margin: 0;
+        justify-self: center;
     }
 
     .Campos {
         grid-row: 3;
-        gap: 4vw;
         width: 100%;
-        margin: 0 auto; 
-        align-items: center;
+        gap: 5vw;
+        display: flex;
+        flex-direction: column;
     }
-    
+
     .input-field-group {
-        width: 73%;
-        padding: 1.6vw;
-        left: 13.5vw;
+        margin-left: 8vw;
+        width: 85%;
+        padding: 0;
+        left: 0;
     }
 
-    #textContent, #textNome, #textComente{
-        font-size: 1.9vw;
-        width: 60vw;
-        align-items: center;
-        margin-left: 16vw;
+    .input-icon {
+        width: 5vw;
+        height: 5vw;
+        left: 4vw;
+        top: 50%;
+        margin: 0;
     }
 
-    #textForm{
-        width: 60vw;
-        align-items: center;
-        margin-left: 30vw;
-        font-size: 1.7vw;
+    .input-container ::placeholder{
+        font-size: 3vw;
     }
 
-    .avaliacao{
-        margin-top:clamp(0.7vw, 1.042vw,20px);
-        margin-bottom:clamp(0.7vw, 1.042vw,20px);
-        width:clamp(60vw, 70vw, 800px);
-        flex-direction: column; 
-        align-items: flex-start;
-        margin-left: 22.2vw;
+    .input-container input,
+    .input-container textarea {
+        height: 11.4vw !important;
+        font-size: 3vw !important;
+        border-radius: 3px !important;
     }
 
-    .c3{
-        top: 3.5vw;
-        left: clamp(1vw, 22vw, 300px); 
-        width: 1.2vw;
-        height: 1.2vw;
-    }
-
-    .star-icon{
-        list-style-type:none;
-        cursor:pointer;
-        font-size:clamp(2.0vw, 5vw,40px);
-        border:none;
-    }
-
-    .feedback-text{
-        font-size:clamp(0.8vw, 2vw,16px);
-        margin-left:clamp(0.7vw, 26vw, 330px);
-        width:clamp(15vw, 34vw,300px);
-        margin-top: -5vw;
+    .input-container.with-icon .input-field-group input {
+        padding-left: 15vw !important;
     }
 
     .linear-gradient-btn {
-        width: 25vw;
-        height: 6.3vw;
-        font-size: 2vw;
+        width: 32vw !important; 
+        height: 8vw !important; 
+        font-size: 2.2vw !important;
         max-height: 30vw;
-        margin-left: 35vw;
+        margin-top: -6vw;
+        margin-left: 28vw;
     }
 
-    .c2 {
-        position: absolute;
-        width: clamp(5vw, 40vw, 600px);
-        height: clamp(5vw, 40vw, 600px);
-        left: clamp(15vw, 34vw, 500px);
-        margin-top: clamp(60vw, 180vw, 1350px);   
+    #textContent, #textNome, #textComente {
+        font-size: 2.7vw !important;
+        width: 70%;
+        margin-left: 10vw;
     }
 
-    #textForm{
-        width: 60vw;
-        align-items: center;
-        margin-left: 33vw;
-        font-size: 1.7vw;
+    #textContent ,#textForm{
+        font-size: 2.7vw !important;
+        width: 70%;
+        margin-left: 15vw;
     }
 
-    #comentarios-lista{
-        gap:clamp(1.5vw, 3vw, 70px);
-        max-width:clamp(40vw, 65vw, 700px);
-        margin:0 auto;
+    .avaliacao {
+        width: 80%;
+        margin-left: 10vw !important; 
+        margin: 0;
+        gap: 2vw;
+    }
+
+    .feedback-text{
+        margin-top: -7.2vw !important;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .comentario{
+        margin-right: 29vw;
+    }
+
+    .input-field-group {
+        width: 70%;
+        margin-left: 17vw;
+    }
+
+    #textContent, #textNome, #textComente{
+        margin-left: 18vw;
+        width: 70vw;
+    }
+
+    .avaliacao {
+        width: 80%;
+        margin-left: 15vw !important; 
+        margin: 0;
+        gap: 2vw;
+    }
+
+    .linear-gradient-btn{
+        margin-top: 1vw;
+        margin-left: 36vw;
     }
 }
