--- a/css/comente.css
+++ b/css/comente.css
@@ -1245,12 +1245,12 @@ hr {
         top: clamp(1vw, 8.8vw, 110px);
     }
 
-    .c3{
+    /*.c3{
         width: 0.8vw;
         height: 0.8vw;
         left: 16.7vw;
         top: 2.7vw;
-    }
+    }*/
 
     .comentario {
         margin-left: 25vw;
@@ -1266,12 +1266,12 @@ hr {
         top: clamp(1vw, 9.4vw, 110px);
     }
 
-    .c3{
+    /*.c3{
         width: 0.8vw;
         height: 0.8vw;
         left: 17vw;
         top: 3vw;
-    }
+    }*/
 
     .comentario {
         margin-left: 25vw;
@@ -1466,12 +1466,12 @@ hr {
         margin-left: 16vw !important;
     }
 
-    .c3{
+    /*.c3{
         top: 4.8vw !important;
         left: clamp(10vw, 29vw, 300px) !important; 
         width: 1.2vw;
         height: 1.2vw;
-    }
+    }*/
 
     .star-icon{
         list-style-type:none;
@@ -1827,12 +1827,13 @@ hr {
 
     .avaliacao {
         width: 80%;
-        margin-left: 10vw !important; 
+        margin-left: 6vw !important; 
         margin: 0;
         gap: 2vw;
     }
 
     .feedback-text{
+        margin-right: 1vw;
         margin-top: -7.2vw !important;
     }
 }
