--- a/css/contato.css
+++ b/css/contato.css
@@ -31,7 +31,7 @@ a {
 }
 
 .logo img {
-     margin-left: clamp(1.5vw, 4vw, 32px);
+    margin-left: clamp(1.5vw, 4vw, 32px);
     width: 190px; 
 }
 
@@ -213,7 +213,7 @@ a {
 }
 
 .imagem img {
-    width: clamp(20.833vw, 45vw, 400px);
+    width: clamp(20.833vw, 30vw, 400px);
     height: clamp(20.833vw, 45vw, 400px);
     margin-top: -20vw;
     margin-left: clamp(5.208vw, 40vw, 570px);
@@ -584,10 +584,10 @@ hr {
     }
 
     .imagem img {
-        width: clamp(20.833vw, 430vw, 600px);
+        width: clamp(20.833vw, 25vw, 600px);
         height: clamp(20.833vw, 45vw, 600px);
         margin-top: -25vw;
-        margin-left: clamp(5.208vw, 36vw, 570px);
+        margin-left: clamp(5.208vw, 47.5vw, 800px);
     }
 
     .comentario .livros img{
@@ -741,6 +741,14 @@ hr {
         top: clamp(1vw, 5vw, 110px);
     }
 
+    .imagem img {
+        width: clamp(20.833vw, 25vw, 600px);
+        height: clamp(20.833vw, 42vw, 600px);
+        margin-top: -25vw;
+        margin-left: clamp(5.208vw, 49vw, 800px);
+        z-index: -3;
+    }
+
     .comentario-conteudo .mobile {
         display: none;
     }
@@ -759,10 +767,10 @@ hr {
     }
 
     .imagem img {
-        width: clamp(20.833vw, 45vw, 500px);
-        height: clamp(20.833vw, 45vw, 800px);
+        width: clamp(20.833vw, 25vw, 600px);
+        height: clamp(20.833vw, 45vw, 600px);
         margin-top: -25vw;
-        margin-left: 40vw !important;
+        margin-left: clamp(5.208vw, 47.5vw, 800px);
         z-index: -3;
     }
 
@@ -822,8 +830,30 @@ hr {
 
 @media screen and (max-width: 920px) and (max-height: 1480px) {
 
+    .logo img {
+        margin-left: clamp(1.5vw, 6vw, 32px);
+        width: 170px; 
+    }
+
     .circulo{
-        top: 5.6vw;
+        top: 5.1vw;
+        height: 1.3vw;
+        width: 1.3vw;
+    }
+
+    .subtitle {
+        margin-top: clamp(5vw, 6vw, 157.5px);
+        font-weight: 500;
+        font-size: clamp(3vw, 5.1vw, 80px);
+        color: white;
+        margin-bottom: clamp(0.521vw, 1.042vw, 30px);
+    }
+
+    .imagem img {
+        width: clamp(20.833vw, 25vw, 600px);
+        height: clamp(20.833vw, 45vw, 600px);
+        margin-top: -25vw;
+        margin-left: clamp(5.208vw, 53vw, 800px);
     }
    
     .comentario {
@@ -872,11 +902,24 @@ hr {
 
 @media screen and (max-width: 860px) {
 
+    .logo img {
+        margin-left: clamp(1.5vw, 6vw, 32px);
+        width: 160px; 
+    }
+
+    .subtitle {
+        margin-top: clamp(5vw, 6vw, 157.5px);
+        font-weight: 500;
+        font-size: clamp(3vw, 4.9vw, 80px);
+        color: white;
+        margin-bottom: clamp(0.521vw, 1.042vw, 30px);
+    }
+
     .imagem img {
-        width: clamp(20.833vw, 50vw, 400px);
-        height: clamp(20.833vw, 45vw, 400px);
+        width: clamp(20.833vw, 25vw, 600px);
+        height: clamp(20.833vw, 45vw, 600px);
         margin-top: -25vw;
-        margin-left: clamp(5.208vw, 38vw, 300px);
+        margin-left: clamp(5.208vw, 53vw, 800px);
     }
 
     .input-container.with-icon textarea.mensagem {
@@ -930,15 +973,21 @@ hr {
         text-align:center; 
         margin-right: 1vw; 
     } 
+
+    .circulo{
+        top: 5.1vw;
+        width: 1.2vw;
+        height: 1.2vw;
+    }
 }
 
 @media screen and (max-width: 820px) {
 
     .imagem img {
-        width: clamp(20.833vw, 50vw, 400px);
-        height: clamp(20.833vw, 50vw, 400px);
-        margin-top: -27vw;
-        margin-left: clamp(5.208vw, 40vw, 300px);
+        width: clamp(20.833vw, 25vw, 600px);
+        height: clamp(20.833vw, 45vw, 600px);
+        margin-top: -25vw;
+        margin-left: clamp(5.208vw, 53vw, 800px);
     }
 
     .comentario-conteudo .mobile {
@@ -962,12 +1011,21 @@ hr {
     }
 
     .circulo{
-        top: 6vw;
+        top: 5.3vw;
     }
 }
 
 @media screen and (max-width: 780px) {
-    
+    .input-icon {
+        position: absolute;
+        left: clamp(0.7vw, 1vw, 15px);
+        top: 2vw;
+        transform: translateY(-50%);
+        width: clamp(0.9vw, 2vw, 24px);
+        height: clamp(0.9vw, 2vw, 24px);
+        z-index: 10;
+    }
+
     .equipe .text-mobile{
         display: none;
     }
@@ -977,7 +1035,7 @@ hr {
     }
 
     .circulo{
-        top: 6.3vw;
+        top: 5.7vw;
     }
 }
 
@@ -1013,10 +1071,10 @@ hr {
 
     .imagem {
         grid-row: 2;
-        width: 90vw;
+        width: 53vw;
         max-width: 600px;
         margin: 0;
-        margin-left: -9vw !important;
+        align-items: center;
     }
     
     .imagem img {
@@ -1027,10 +1085,10 @@ hr {
 
     .c1 {
         position: absolute;
-        width: clamp(25vw, 45vw, 650px);
-        height: clamp(25vw, 45vw, 650px);
-        left: clamp(3vw, 6vw, 150px);
-        top: clamp(15vw, 60vw, 1000px);  
+        width: clamp(25vw, 48vw, 650px);
+        height: clamp(25vw, 48vw, 650px);
+        left: clamp(3vw, 14vw, 250px);
+        top: clamp(15vw, 205vw, 5000px);  
         z-index: -1;
     }
 
