:sparkles: Feat: Arrumar o css, a responsividade e concluir o JS.

--- a/css/contato.css
+++ b/css/contato.css
@@ -995,7 +995,7 @@ hr {
     }
 
     .hamburger-icon{
-        display: block;
+        display: flex;
         height: 5vw;
         width: 6vw;
         margin-right: 9vw;
